[package]
name = "trezoa-client-test"
description = "Trezoa RPC Test"
documentation = "https://docs.rs/trezoa-client-test"
publish = false
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
futures-util = { workspace = true }
rand = { workspace = true }
serde_json = { workspace = true }
trezoa-client = { workspace = true }
trezoa-ledger = { workspace = true }
trezoa-measure = { workspace = true }
trezoa-merkle-tree = { workspace = true }
trezoa-metrics = { workspace = true }
trezoa-perf = { workspace = true }
trezoa-pubsub-client = { workspace = true }
trezoa-rayon-threadlimit = { workspace = true }
trezoa-rpc = { workspace = true }
trezoa-rpc-client = { workspace = true }
trezoa-rpc-client-api = { workspace = true }
trezoa-runtime = { workspace = true }
trezoa-sdk = { workspace = true }
trezoa-streamer = { workspace = true }
trezoa-test-validator = { workspace = true }
trezoa-transaction-status = { workspace = true }
trezoa-version = { workspace = true }
systemstat = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tungstenite = { workspace = true, features = ["rustls-tls-webpki-roots"] }

[dev-dependencies]
trezoa-logger = { workspace = true }
trezoa-runtime = { workspace = true, features = ["dev-context-only-utils"] }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
