[package]
name = "trezoa-client"
description = "Trezoa Client"
documentation = "https://docs.rs/trezoa-client"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[features]
trezoa-unstable-api = []
dev-context-only-utils = []

[dependencies]
async-trait = { workspace = true }
bincode = { workspace = true }
dashmap = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
indexmap = { workspace = true }
indicatif = { workspace = true }
log = { workspace = true }
quinn = { workspace = true }
rayon = { workspace = true }
trezoa-account = { workspace = true }
trezoa-client-traits = { workspace = true }
trezoa-commitment-config = { workspace = true }
trezoa-connection-cache = { workspace = true }
trezoa-epoch-info = { workspace = true }
trezoa-hash = { workspace = true }
trezoa-instruction = { workspace = true }
trezoa-keypair = { workspace = true }
trezoa-measure = { workspace = true }
trezoa-message = { workspace = true }
trezoa-net-utils = { workspace = true }
trezoa-pubkey = { workspace = true }
trezoa-pubsub-client = { workspace = true }
trezoa-quic-client = { workspace = true }
trezoa-quic-definitions = { workspace = true }
trezoa-rpc-client = { workspace = true, features = ["default"] }
trezoa-rpc-client-api = { workspace = true }
trezoa-rpc-client-nonce-utils = { workspace = true }
trezoa-signature = { workspace = true }
trezoa-signer = { workspace = true }
trezoa-streamer = { workspace = true }
trezoa-time-utils = { workspace = true }
trezoa-tpu-client = { workspace = true, features = ["default"] }
trezoa-transaction = { workspace = true }
trezoa-transaction-error = { workspace = true }
trezoa-transaction-status-client-types = { workspace = true }
trezoa-udp-client = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true }

[dev-dependencies]
crossbeam-channel = { workspace = true }
