[package]
name = "trezoa-client"
description = "Trezoa Client"
documentation = "https://docs.rs/trezoa-client"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
async-trait = { workspace = true }
bincode = { workspace = true }
dashmap = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
indexmap = { workspace = true }
indicatif = { workspace = true }
log = { workspace = true }
quinn = { workspace = true }
rayon = { workspace = true }
trezoa-connection-cache = { workspace = true }
trezoa-measure = { workspace = true }
trezoa-metrics = { workspace = true }
trezoa-pubsub-client = { workspace = true }
trezoa-quic-client = { workspace = true }
trezoa-rpc-client = { workspace = true, features = ["default"] }
trezoa-rpc-client-api = { workspace = true }
trezoa-rpc-client-nonce-utils = { workspace = true }
trezoa-sdk = { workspace = true }
trezoa-streamer = { workspace = true }
trezoa-thin-client = { workspace = true }
trezoa-tpu-client = { workspace = true, features = ["default"] }
trezoa-udp-client = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }

[dev-dependencies]
crossbeam-channel = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
