[package]
name = "trezoa-compute-budget"
description = "Trezoa compute budget"
documentation = "https://docs.rs/trezoa-compute-budget"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[features]
trezoa-unstable-api = []
dev-context-only-utils = [
    "dep:qualifier_attr",
    "trezoa-program-runtime/dev-context-only-utils",
]
frozen-abi = ["dep:trezoa-frozen-abi", "trezoa-fee-structure/frozen-abi"]

[dependencies]
qualifier_attr = { workspace = true, optional = true }
trezoa-fee-structure = { workspace = true }
trezoa-frozen-abi = { workspace = true, optional = true, features = [
    "frozen-abi",
] }
trezoa-program-runtime = { workspace = true }

[lints]
workspace = true
