[package]
name = "trezoa-core"
description = "Blockchain, Rebuilt for Scale"
documentation = "https://docs.rs/trezoa-core"
readme = "../README.md"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[badges]
codecov = { repository = "trezoa-team/trezoa", branch = "master", service = "github" }

[dependencies]
base64 = { workspace = true }
bincode = { workspace = true }
bs58 = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true, features = ["default", "serde"] }
crossbeam-channel = { workspace = true }
dashmap = { workspace = true, features = ["rayon", "raw-api"] }
eager = { workspace = true }
etcd-client = { workspace = true, features = ["tls"] }
futures = { workspace = true }
histogram = { workspace = true }
itertools = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
lru = { workspace = true }
min-max-heap = { workspace = true }
num_enum = { workspace = true }
prio-graph = { workspace = true }
quinn = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
rayon = { workspace = true }
rcgen = { workspace = true }
rolling-file = { workspace = true }
rustls = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
serde_derive = { workspace = true }
trezoa-accounts-db = { workspace = true }
trezoa-bloom = { workspace = true }
trezoa-client = { workspace = true }
trezoa-cost-model = { workspace = true }
trezoa-entry = { workspace = true }
trezoa-frozen-abi = { workspace = true }
trezoa-frozen-abi-macro = { workspace = true }
trezoa-geyser-plugin-manager = { workspace = true }
trezoa-gossip = { workspace = true }
trezoa-ledger = { workspace = true }
trezoa-measure = { workspace = true }
trezoa-metrics = { workspace = true }
trezoa-net-utils = { workspace = true }
trezoa-perf = { workspace = true }
trezoa-poh = { workspace = true }
trezoa-program-runtime = { workspace = true }
trezoa-quic-client = { workspace = true }
trezoa-rayon-threadlimit = { workspace = true }
trezoa-rpc = { workspace = true }
trezoa-rpc-client-api = { workspace = true }
trezoa-runtime = { workspace = true }
trezoa-sdk = { workspace = true }
trezoa-send-transaction-service = { workspace = true }
trezoa-streamer = { workspace = true }
trezoa-tpu-client = { workspace = true }
trezoa-transaction-status = { workspace = true }
trezoa-turbine = { workspace = true }
trezoa-unified-scheduler-pool = { workspace = true }
trezoa-version = { workspace = true }
trezoa-vote = { workspace = true }
trezoa-vote-program = { workspace = true }
trezoa-wen-restart = { workspace = true }
strum = { workspace = true, features = ["derive"] }
strum_macros = { workspace = true }
sys-info = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
trees = { workspace = true }

[dev-dependencies]
assert_matches = { workspace = true }
fs_extra = { workspace = true }
raptorq = { workspace = true }
serde_json = { workspace = true }
serial_test = { workspace = true }
# See order-crates-for-publishing.py for using this unusual `path = "."`
trezoa-core = { path = ".", features = ["dev-context-only-utils"] }
trezoa-ledger = { workspace = true, features = ["dev-context-only-utils"] }
trezoa-logger = { workspace = true }
trezoa-poh = { workspace = true, features = ["dev-context-only-utils"] }
trezoa-program-runtime = { workspace = true }
trezoa-runtime = { workspace = true, features = ["dev-context-only-utils"] }
trezoa-sdk = { workspace = true, features = ["dev-context-only-utils"] }
trezoa-stake-program = { workspace = true }
static_assertions = { workspace = true }
systemstat = { workspace = true }
test-case = { workspace = true }

[target."cfg(unix)".dependencies]
sysctl = { workspace = true }

[build-dependencies]
rustc_version = { workspace = true }

[features]
dev-context-only-utils = []

[[bench]]
name = "banking_stage"

[[bench]]
name = "gen_keys"

[[bench]]
name = "sigverify_stage"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
